--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Donnell Washington
 logo: Assets/headshot.jpg
 #description: 
-#show_download: true
+show_download: true
 theme: jekyll-theme-minimal
