--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ logo: Assets/headshot.jpg
 #description: 
 show_download: true
 theme: jekyll-theme-minimal
+
+![Alt text describing the image] (Assets/2DArray.PNG)
+
+![Alt text describing the image] (Assets/gameboardMem.PNG)
