--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Donnell Washington
 logo: Assets/headshot.jpg
-#description: 
+description: Hey there!
 show_download: true
 theme: jekyll-theme-minimal
 
