--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Donnell Washington
 logo: Assets/headshot.jpg
-description: Hey there!
+description: Hey there im Donnell Washington! I am a passionate and driven Computer Science student with a strong foundation in software engineering, algorithms, and system design. With hands-on experience in coding, embedded systems, and project development, I am eager to apply my skills in software development and work on challenging problems that contribute to meaningful solutions. My goal is to collaborate with a dynamic team, continuously learn, and grow in the field of software engineering.
 show_download: true
 theme: jekyll-theme-minimal
 
